--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       width: 90%;
       text-align: center;
       animation: fadeIn 1s ease-in-out;
+      margin-top: 120px; /* Tambahkan margin atas agar tidak menutupi judul */
     }
 
     @keyframes fadeIn {
@@ -74,14 +75,10 @@
 
     .curve h2 {
       color: var(--secondary-color);
-      font-size: 1.2rem;
+      font-size: 1rem;
       margin: 0;
       font-weight: normal;
     }
-
-
-
-
     h1 {
       font-size: 1.5rem;
       margin-bottom: 1.5rem;
@@ -185,7 +182,7 @@
     <h2>Sistem Pendataan Presensi</h2>
   </div>
   <div class="container">
-    <h1><i class="fas fa-calendar-check"></i> Klik nama untuk merekam pendataan presensi</h1>
+    <h4><i class="fas fa-calendar-check"></i> Klik nama untuk mencatat presensi</h4>
     <div class="button-container">
       <div class="button-container">
         <button onclick="presensi('Deva Mandela')">Deva Mandela</button>
@@ -214,65 +211,83 @@
 
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script>
-    const buttons = document.querySelectorAll('button');
-    const statusMessage = document.getElementById('statusMessage');
-    const confirmation = document.getElementById('confirmation');
-    const confirmationMessage = document.getElementById('confirmationMessage');
-    const loading = document.getElementById('loading');
+// Langsung kirim IP ke Apps Script tanpa menampilkan ke user
+// Hapus fungsi displayIPAddress dan penggunaannya
+// Langsung kirim IP ke Apps Script tanpa menampilkan ke user
 
-    // Lokasi yang diizinkan
-    const allowedLocations = [
-      { lat: -6.589108056587621, lng: 106.8218295143879 }, // Lokasi 1 (Shahaba Ruko Tanah Baru Residence)
-      { lat: -6.592279, lng: 106.822581 } // Lokasi 2 (Shahaba Jl. Swadaya)
-    ];
+const buttons = document.querySelectorAll('button');
+const statusMessage = document.getElementById('statusMessage');
+const confirmation = document.getElementById('confirmation');
+const confirmationMessage = document.getElementById('confirmationMessage');
+const loading = document.getElementById('loading');
 
-    // Fungsi untuk menghitung jarak antara dua koordinat (dalam meter)
-    function calculateDistance(lat1, lon1, lat2, lon2) {
-      const R = 6371e3; // Radius bumi dalam meter
-      const φ1 = (lat1 * Math.PI) / 180;
-      const φ2 = (lat2 * Math.PI) / 180;
-      const Δφ = ((lat2 - lat1) * Math.PI) / 180;
-      const Δλ = ((lon2 - lon1) * Math.PI) / 180;
+// Lokasi yang diizinkan
+const allowedLocations = [
+  { lat: -6.589108056587621, lng: 106.8218295143879 }, // Lokasi 1 (Shahaba Ruko Tanah Baru Residence)
+  { lat: -6.592279, lng: 106.822581 } // Lokasi 2 (Shahaba Jl. Swadaya)
+];
 
-      const a =
-        Math.sin(Δφ / 2) * Math.sin(Δφ / 2) +
-        Math.cos(φ1) * Math.cos(φ2) * Math.sin(Δλ / 2) * Math.sin(Δλ / 2);
-      const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+// Fungsi untuk menghitung jarak antara dua koordinat (dalam meter)
+function calculateDistance(lat1, lon1, lat2, lon2) {
+  const R = 6371e3; // Radius bumi dalam meter
+  const φ1 = (lat1 * Math.PI) / 180;
+  const φ2 = (lat2 * Math.PI) / 180;
+  const Δφ = ((lat2 - lat1) * Math.PI) / 180;
+  const Δλ = ((lon2 - lon1) * Math.PI) / 180;
 
-      return R * c;
-    }
-    // Fungsi untuk memeriksa lokasi pengguna
-    function checkLocation() {
-      return new Promise((resolve, reject) => {
-        if (!navigator.geolocation) {
-          reject("Geolocation tidak didukung di browser ini.");
-        } else {
-          navigator.geolocation.getCurrentPosition(
-            (position) => {
-              const userLat = position.coords.latitude;
-              const userLng = position.coords.longitude;
+  const a =
+    Math.sin(Δφ / 2) * Math.sin(Δφ / 2) +
+    Math.cos(φ1) * Math.cos(φ2) * Math.sin(Δλ / 2) * Math.sin(Δλ / 2);
+  const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
 
-              // Cek apakah pengguna berada dalam radius 100 km dari salah satu lokasi yang diizinkan
-              const isWithinRadius = allowedLocations.some(
-                (loc) => calculateDistance(userLat, userLng, loc.lat, loc.lng) <= 100000
-              );
+  return R * c;
+}
 
-              if (isWithinRadius) {
-                resolve();
-              } else {
-                reject("Anda berada di luar radius yang diizinkan.");
-              }
-            },
-            (error) => {
-              reject("Gagal mendapatkan lokasi: " + error.message);
-            }
+// Fungsi untuk memeriksa lokasi pengguna
+function checkLocation() {
+  return new Promise((resolve, reject) => {
+    if (!navigator.geolocation) {
+      reject("Geolocation tidak didukung di browser ini.");
+    } else {
+      navigator.geolocation.getCurrentPosition(
+        (position) => {
+          const userLat = position.coords.latitude;
+          const userLng = position.coords.longitude;
+
+          // Cek apakah pengguna berada dalam radius 20 m dari salah satu lokasi yang diizinkan
+          const isWithinRadius = allowedLocations.some(
+            (loc) => calculateDistance(userLat, userLng, loc.lat, loc.lng) <= 20
           );
-        }
-      });
-    }
 
-    async function presensi(nama) {
-        const { isConfirmed } = await Swal.fire({
+          if (isWithinRadius) {
+            resolve();
+          } else {
+            reject("Anda berada di luar radius yang diizinkan.");
+          }
+        },
+        (error) => {
+          reject("Gagal mendapatkan lokasi: " + error.message);
+        }
+      );
+    }
+  });
+}
+
+// Fungsi untuk mendapatkan alamat IP
+async function getIPAddress() {
+  try {
+    const response = await fetch('https://api.ipify.org?format=json');
+    const data = await response.json();
+    return data.ip;
+  } catch (error) {
+    console.error("Gagal mendapatkan alamat IP:", error);
+    return null;
+  }
+}
+
+// Fungsi presensi
+async function presensi(nama) {
+  const { isConfirmed } = await Swal.fire({
     title: `Apakah Anda ${nama}?`,
     text: "Pendataan presensi tidak dapat diwakilkan.",
     icon: "question",
@@ -294,7 +309,8 @@
     await checkLocation();
 
     // Kirim data ke Google Apps Script
-    const response = await fetch(`https://script.google.com/macros/s/AKfycbysZpYeJ1Gr8TctQ-DC_VH3pYpQTrZvhiqebICeOV4Z2PsOAddECpPO4koTeLHMHFRfmg/exec?nama=${encodeURIComponent(nama)}`);
+    const ip = await getIPAddress();
+    const response = await fetch(`https://script.google.com/macros/s/AKfycby8IrGzgkOVV1YXsn6FDPDJqdgBqB5NxJLKvPm1GitDzahsla0aNym_idF9jFdU3pba0g/exec?nama=${encodeURIComponent(nama)}&ip=${encodeURIComponent(ip)}`);
     const result = await response.text();
 
     // Tampilkan pesan sukses dengan SweetAlert2
@@ -313,12 +329,13 @@
   } catch (error) {
     // Tampilkan pesan error
     statusMessage.innerText = error;
-    statusMessage.style.color = getComputedStyle(document.documentElement).getPropertyValue('--error-color'); // Perbaikan di sini
+    statusMessage.style.color = getComputedStyle(document.documentElement).getPropertyValue('--error-color');
     button.disabled = false;
   } finally {
     loading.style.display = 'none'; // Sembunyikan loading indicator
   }
 }
+
   </script>
 </body>
 </html>
