--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       width: 90%;
       text-align: center;
       animation: fadeIn 1s ease-in-out;
-      margin-top: 120px; /* Tambahkan margin atas agar tidak menutupi judul */
+      margin-top: 100px; /* Tambahkan margin atas agar tidak menutupi judul */
     }
 
     @keyframes fadeIn {
@@ -212,9 +212,6 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script>
 // Langsung kirim IP ke Apps Script tanpa menampilkan ke user
-// Hapus fungsi displayIPAddress dan penggunaannya
-// Langsung kirim IP ke Apps Script tanpa menampilkan ke user
-
 const buttons = document.querySelectorAll('button');
 const statusMessage = document.getElementById('statusMessage');
 const confirmation = document.getElementById('confirmation');
@@ -254,9 +251,9 @@ function checkLocation() {
           const userLat = position.coords.latitude;
           const userLng = position.coords.longitude;
 
-          // Cek apakah pengguna berada dalam radius 20 m dari salah satu lokasi yang diizinkan
+          // Cek apakah pengguna berada dalam radius 100 km dari salah satu lokasi yang diizinkan
           const isWithinRadius = allowedLocations.some(
-            (loc) => calculateDistance(userLat, userLng, loc.lat, loc.lng) <= 20
+            (loc) => calculateDistance(userLat, userLng, loc.lat, loc.lng) <= 100000
           );
 
           if (isWithinRadius) {
@@ -285,6 +282,32 @@ async function getIPAddress() {
   }
 }
 
+// Fungsi untuk memeriksa status tombol dari spreadsheet
+async function getButtonStatus() {
+  try {
+    const response = await fetch(`https://script.google.com/macros/s/AKfycbzs6_8xq-KSMjonJ2dU72AMO2m9YnIsHr_0s0WhNyjXa8MecZrnTXjZs635ajffULgRhQ/exec?action=getStatus`);
+    const data = await response.json();
+    return data;
+  } catch (error) {
+    console.error("Gagal memeriksa status tombol:", error);
+    return {};
+  }
+}
+
+// Fungsi untuk menonaktifkan tombol berdasarkan status
+async function updateButtonStatus() {
+  const status = await getButtonStatus();
+  const buttons = document.querySelectorAll('button');
+
+  buttons.forEach(button => {
+    const nama = button.innerText;
+    if (status[nama] === "Nonaktif") {
+      button.disabled = true;
+      button.innerText = `${nama} - Sudah Datang`;
+    }
+  });
+}
+
 // Fungsi presensi
 async function presensi(nama) {
   const { isConfirmed } = await Swal.fire({
@@ -310,7 +333,9 @@ async function presensi(nama) {
 
     // Kirim data ke Google Apps Script
     const ip = await getIPAddress();
-    const response = await fetch(`https://script.google.com/macros/s/AKfycby8IrGzgkOVV1YXsn6FDPDJqdgBqB5NxJLKvPm1GitDzahsla0aNym_idF9jFdU3pba0g/exec?nama=${encodeURIComponent(nama)}&ip=${encodeURIComponent(ip)}`);
+    const response = await fetch(
+      `https://script.google.com/macros/s/AKfycbzs6_8xq-KSMjonJ2dU72AMO2m9YnIsHr_0s0WhNyjXa8MecZrnTXjZs635ajffULgRhQ/exec?action=presensi&nama=${encodeURIComponent(nama)}&ip=${encodeURIComponent(ip)}`
+    );
     const result = await response.text();
 
     // Tampilkan pesan sukses dengan SweetAlert2
@@ -320,7 +345,7 @@ async function presensi(nama) {
       text: `Presensi ${nama} telah dicatat.`,
     });
 
-    // Tampilkan konfirmasi di halaman
+    // Update tampilan tombol
     button.innerText = `${nama} - Sudah Datang`;
     const waktu = new Date().toLocaleTimeString();
     confirmationMessage.innerText = `${nama} pukul ${waktu}`;
@@ -328,7 +353,7 @@ async function presensi(nama) {
     statusMessage.innerText = "";
   } catch (error) {
     // Tampilkan pesan error
-    statusMessage.innerText = error;
+    statusMessage.innerText = error.message;
     statusMessage.style.color = getComputedStyle(document.documentElement).getPropertyValue('--error-color');
     button.disabled = false;
   } finally {
@@ -336,6 +361,12 @@ async function presensi(nama) {
   }
 }
 
+// Periksa status tombol saat halaman dimuat
+window.onload = async () => {
+  await updateButtonStatus();
+  // Periksa status tombol setiap 5 detik
+  setInterval(updateButtonStatus, 5000);
+};
   </script>
 </body>
 </html>
