--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pendataan Presensi</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
   <style>
     :root {
       --primary-color: #00245a;
@@ -44,7 +45,7 @@
       width: 90%;
       text-align: center;
       animation: fadeIn 1s ease-in-out;
-      margin-top: 100px; /* Tambahkan margin atas agar tidak menutupi judul */
+      margin-top: 55px; /* Tambahkan margin atas agar tidak menutupi judul */
     }
 
     @keyframes fadeIn {
@@ -81,7 +82,7 @@
     }
     h1 {
       font-size: 1.5rem;
-      margin-bottom: 1.5rem;
+      margin-bottom: 1rem;
       animation: slideIn 1s ease-in-out;
     }
 
@@ -135,7 +136,7 @@
 
     .confirmation {
       display: none;
-      margin-top: 2rem;
+      margin-top: 1rem;
       animation: fadeIn 0.5s ease-in-out;
     }
     #statusMessage {
