--- a/try.html
+++ b/try.html
@@ -38,7 +38,7 @@
       background: rgba(255, 255, 255, 0.1);
       backdrop-filter: blur(1px);
       padding: 2rem;
-      border-radius: 20px;
+      border-radius: 25px;
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
       max-width: 800px;
       width: 90%;
@@ -81,7 +81,7 @@
     }
     h1 {
       font-size: 1.5rem;
-      margin-bottom: 1.5rem;
+      margin-bottom: 1rem;
       animation: slideIn 1s ease-in-out;
     }
 
@@ -135,7 +135,7 @@
 
     .confirmation {
       display: none;
-      margin-top: 2rem;
+      margin-top: 1rem;
       animation: fadeIn 0.5s ease-in-out;
     }
     #statusMessage {
@@ -259,11 +259,16 @@ function checkLocation() {
           if (isWithinRadius) {
             resolve();
           } else {
-            reject("Anda berada di luar radius yang diizinkan.");
+            reject("Anda berada di luar lokasi yang diizinkan.");
           }
         },
         (error) => {
-          reject("Gagal mendapatkan lokasi: " + error.message);
+          // Pesan error jika pengguna tidak mengizinkan akses lokasi
+          if (error.code === error.PERMISSION_DENIED) {
+            reject("Anda tidak mengizinkan akses lokasi. Harap aktifkan izin lokasi.");
+          } else {
+            reject("Gagal mendapatkan lokasi: " + error.message);
+          }
         }
       );
     }
@@ -285,7 +290,9 @@ async function getIPAddress() {
 // Fungsi untuk memeriksa status tombol dari spreadsheet
 async function getButtonStatus() {
   try {
-    const response = await fetch(`https://script.google.com/macros/s/AKfycbzs6_8xq-KSMjonJ2dU72AMO2m9YnIsHr_0s0WhNyjXa8MecZrnTXjZs635ajffULgRhQ/exec?action=getStatus`);
+    const response = await fetch(
+      `https://script.google.com/macros/s/AKfycbzTFT1vs5aPRBNNDPX47CZIdChdYUZG2Zy529BhI16pPBdPij7D5BF6VSZp-27pFN4CjQ/exec?action=getStatus`
+    );
     const data = await response.json();
     return data;
   } catch (error) {
@@ -334,7 +341,7 @@ async function presensi(nama) {
     // Kirim data ke Google Apps Script
     const ip = await getIPAddress();
     const response = await fetch(
-      `https://script.google.com/macros/s/AKfycbzs6_8xq-KSMjonJ2dU72AMO2m9YnIsHr_0s0WhNyjXa8MecZrnTXjZs635ajffULgRhQ/exec?action=presensi&nama=${encodeURIComponent(nama)}&ip=${encodeURIComponent(ip)}`
+      `https://script.google.com/macros/s/AKfycbzTFT1vs5aPRBNNDPX47CZIdChdYUZG2Zy529BhI16pPBdPij7D5BF6VSZp-27pFN4CjQ/exec?action=presensi&nama=${encodeURIComponent(nama)}&ip=${encodeURIComponent(ip)}`
     );
     const result = await response.text();
 
@@ -353,7 +360,7 @@ async function presensi(nama) {
     statusMessage.innerText = "";
   } catch (error) {
     // Tampilkan pesan error
-    statusMessage.innerText = error.message;
+    statusMessage.innerText = error;
     statusMessage.style.color = getComputedStyle(document.documentElement).getPropertyValue('--error-color');
     button.disabled = false;
   } finally {
