--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pendataan Presensi</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
   <style>
     :root {
       --primary-color: #00245a;
@@ -252,19 +251,24 @@ function checkLocation() {
           const userLat = position.coords.latitude;
           const userLng = position.coords.longitude;
 
-          // Cek apakah pengguna berada dalam radius 20 m dari salah satu lokasi yang diizinkan
+          // Cek apakah pengguna berada dalam radius 100 km dari salah satu lokasi yang diizinkan
           const isWithinRadius = allowedLocations.some(
-            (loc) => calculateDistance(userLat, userLng, loc.lat, loc.lng) <= 20
+            (loc) => calculateDistance(userLat, userLng, loc.lat, loc.lng) <= 100000
           );
 
           if (isWithinRadius) {
             resolve();
           } else {
-            reject("Anda berada di luar radius yang diizinkan.");
+            reject("Anda berada di luar lokasi yang diizinkan.");
           }
         },
         (error) => {
-          reject("Gagal mendapatkan lokasi: " + error.message);
+          // Pesan error jika pengguna tidak mengizinkan akses lokasi
+          if (error.code === error.PERMISSION_DENIED) {
+            reject("Anda tidak mengizinkan akses lokasi. Harap aktifkan izin lokasi.");
+          } else {
+            reject("Gagal mendapatkan lokasi: " + error.message);
+          }
         }
       );
     }
@@ -286,7 +290,9 @@ async function getIPAddress() {
 // Fungsi untuk memeriksa status tombol dari spreadsheet
 async function getButtonStatus() {
   try {
-    const response = await fetch(`https://script.google.com/macros/s/AKfycbzs6_8xq-KSMjonJ2dU72AMO2m9YnIsHr_0s0WhNyjXa8MecZrnTXjZs635ajffULgRhQ/exec?action=getStatus`);
+    const response = await fetch(
+      `https://script.google.com/macros/s/AKfycbxiONB6ZxClTKwoD-GMJU2vp-rgdDFfEaFfAG3zyAqWchh_XWrsYDlqiX_2P12zNn0D2g/exec?action=getStatus`
+    );
     const data = await response.json();
     return data;
   } catch (error) {
@@ -335,7 +341,7 @@ async function presensi(nama) {
     // Kirim data ke Google Apps Script
     const ip = await getIPAddress();
     const response = await fetch(
-      `https://script.google.com/macros/s/AKfycbzs6_8xq-KSMjonJ2dU72AMO2m9YnIsHr_0s0WhNyjXa8MecZrnTXjZs635ajffULgRhQ/exec?action=presensi&nama=${encodeURIComponent(nama)}&ip=${encodeURIComponent(ip)}`
+      `https://script.google.com/macros/s/AKfycbxiONB6ZxClTKwoD-GMJU2vp-rgdDFfEaFfAG3zyAqWchh_XWrsYDlqiX_2P12zNn0D2g/exec?action=presensi&nama=${encodeURIComponent(nama)}&ip=${encodeURIComponent(ip)}`
     );
     const result = await response.text();
 
@@ -354,7 +360,7 @@ async function presensi(nama) {
     statusMessage.innerText = "";
   } catch (error) {
     // Tampilkan pesan error
-    statusMessage.innerText = error.message;
+    statusMessage.innerText = error;
     statusMessage.style.color = getComputedStyle(document.documentElement).getPropertyValue('--error-color');
     button.disabled = false;
   } finally {
