--- a/try.html
+++ b/try.html
@@ -174,6 +174,30 @@
         grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
       }
     }
+        
+        a {
+            text-decoration: none;
+            padding: 10px 20px;
+            background-color: #172e69;
+            color: white;
+            border-radius: 15px;
+            border: 2px solid #a0a0a0;
+            cursor: pointer;
+            display: inline-block;
+        }
+
+        a:hover {
+            background-color: #3563d6;
+            border-color: #a0a0a0;
+            border: 2px;
+            display: inline-block;
+        }
+
+        a:active {
+            background-color: #172e69;
+            border-color: #5c5c5c;
+        }
+        }
   </style>
 </head>
 <body>
@@ -181,8 +205,14 @@
     <h1>Shahaba</h1>
     <h2>Sistem Pendataan Presensi</h2>
   </div>
+
   <div class="container">
-    <h4><i class="fas fa-calendar-check"></i> Klik nama untuk mencatat presensi</h4>
+      <!-- Tombol untuk menuju web app presensi peserta didik -->
+      <a href="https://muchrifqi.github.io/App/PresensiPD/index.html" >
+        <i class="fas fa-users"></i> Aplikasi Presensi Peserta Didik
+      </a>
+
+    <h4><i class="fas fa-calendar-check"></i> Pencatatan Presensi Pegawai</h4>
     <div class="button-container">
       <div class="button-container">
         <button onclick="presensi('Deva Mandela')">Deva Mandela</button>
